--- a/SleepTracker-RecyclerView/app/src/main/res/layout/list_item_sleep_night.xml
+++ b/SleepTracker-RecyclerView/app/src/main/res/layout/list_item_sleep_night.xml
@@ -8,12 +8,16 @@
         <variable
             name="sleep"
             type="br.com.tarcisiofl.trackmysleepquality.database.SleepNight" />
+
+        <variable
+            name="clickListener"
+            type="br.com.tarcisiofl.trackmysleepquality.sleeptracker.SleepNightListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:onClick="@{() -> clickListener.onClick(sleep)}">
 
         <ImageView
             android:id="@+id/quality_image"
@@ -25,8 +29,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@drawable/ic_sleep_5"
-            app:sleepImage="@{sleep}"/>
+            app:sleepImage="@{sleep}"
+            tools:srcCompat="@drawable/ic_sleep_5" />
 
         <TextView
             android:id="@+id/quality_string"
@@ -36,7 +40,7 @@
             app:layout_constraintEnd_toEndOf="@+id/quality_image"
             app:layout_constraintStart_toStartOf="@+id/quality_image"
             app:layout_constraintTop_toBottomOf="@+id/quality_image"
-            app:sleepQualityString="@{sleep}"/>
+            app:sleepQualityString="@{sleep}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
