--- a/SleepTracker-RecyclerView/app/src/main/res/layout/header.xml
+++ b/SleepTracker-RecyclerView/app/src/main/res/layout/header.xml
@@ -3,7 +3,12 @@
           android:id="@+id/text"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="8dp"
+          android:layout_marginEnd="8dp"
           android:text="@string/header_text"
+          android:background="@color/colorAccent"
+          android:textColor="@color/white_text_color"
           android:textAlignment="center"
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:padding="8dp" />
