--- a/MarsRealEstate/app/src/main/res/layout/grid_view_item.xml
+++ b/MarsRealEstate/app/src/main/res/layout/grid_view_item.xml
@@ -24,8 +24,8 @@
     <data>
 
         <variable
-            name="viewModel"
-            type="br.com.tarcisiofl.marsrealestate.overview.OverviewViewModel" />
+            name="property"
+            type="br.com.tarcisiofl.marsrealestate.network.MarsProperty" />
     </data>
 
     <ImageView
@@ -35,6 +35,6 @@
         android:scaleType="centerCrop"
         android:adjustViewBounds="true"
         android:padding="2dp"
-        app:imageUrl="@{viewModel.property.imgSrcUrl}"
+        app:imageUrl="@{property.imgSrcUrl}"
         tools:src="@tools:sample/backgrounds/scenic" />
 </layout>
